--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   provider: ^6.0.5
   motion_toast: ^2.6.4
   device_info_plus: ^8.0.0
+  google_maps_flutter: ^2.2.3
+  location: ^4.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
